--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -27,6 +27,8 @@ tasks:
       - rm -fr gen/*
 
   gen-proto:
+    env:
+      DISABLE_REQUIRE_UNIMPLEMENTED_SERVERS: 1
     cmds:
       - bash protobuild.sh
       - touch gen/proto.touch
@@ -41,6 +43,7 @@ tasks:
     cmds:
       - mockery --with-expecter --dir pkg/ --output ./gen/mocks --all --keeptree --case snake
       - mockery --with-expecter --name "RpcReadWriter" --dir . --output ./gen/mocks --case snake
+      - mockery --with-expecter --dir ./gen/testproto --output ./gen/testproto/mocks --all --keeptree --case snake
     sources:
       - "pkg/**/*.go"
       - "goat.go"
