--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -49,7 +49,7 @@ tasks:
   gen-mocks:
     deps: [gen-proto]
     cmds:
-      - mockery --with-expecter --name "RpcReadWriter" --dir . --output ./gen/mocks --case snake
+      - mockery --with-expecter --name "RpcReadWriter" --dir types --output ./gen/mocks --case snake
       - mockery --with-expecter --dir ./gen/testproto --output ./gen/testproto/mocks --all --keeptree --case snake
     sources:
       - "pkg/**/*.go"
