--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        submodules: "true"
+        token: ${{ secrets.PROTOREPO_ACCESS }}
+
+    - name: Update submodules
+      run: cd ..; git submodule update --init --recursive
 
     - name: Setup Golang with cache
       uses: magnetikonline/action-golang-cache@v3
