Add exhaustive analysis

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,6 +20,8 @@ tasks:
     vars:
       FLAGS: '{{default "-cover -timeout 30s" .FLAGS}}'
     cmds:
+      - go install github.com/nishanths/exhaustive/cmd/exhaustive@latest
+      - exhaustive ./...
       - go test {{.FLAGS}} ./...
 
   build:
