Enable default-signifies-exhaustive on the exhaustive switch checker

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,7 +20,7 @@ tasks:
     vars:
       FLAGS: '{{default "-cover -timeout 30s" .FLAGS}}'
     cmds:
-      - exhaustive ./...
+      - exhaustive -default-signifies-exhaustive ./...
       - go test {{.FLAGS}} ./...
 
   build:
