--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "protorepo"]
-	path = protorepo
-	url = git@github.com:avos-io/protorepo.git
+[submodule "goatorepo"]
+	path = goatorepo
+	url = git@github.com:avos-io/goatorepo.git
