--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -45,7 +45,7 @@ tasks:
       - gen/proto.touch
     sources:
       - protobuild.sh
-      - "protorepo/goat/*.proto"
+      - "goatorepo/*.proto"
 
   gen-mocks:
     deps: [gen-proto]
