--- a/buf.yaml
+++ b/buf.yaml
@@ -1,4 +1,10 @@
 version: v1
+deps:
+  - buf.build/bufbuild/protovalidate
+  - buf.build/googleapis/googleapis
+  - buf.build/gogo/protobuf
+  - buf.build/grpc-ecosystem/grpc-gateway
+  - buf.build/envoyproxy/protoc-gen-validate
 breaking:
   use:
     - FILE
