--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -46,6 +46,14 @@ tasks:
         --user $(id -u):$(id -g)
         --env XDG_CACHE_HOME=/workspace
         {{end}}
+        bufbuild/buf mod update
+        docker run --rm
+        --volume "$(pwd):/workspace"
+        --workdir /{{default "workspace" .GOAT_BUF_WORK_DIR}}
+        {{if eq OS "linux"}}
+        --user $(id -u):$(id -g)
+        --env XDG_CACHE_HOME=/workspace
+        {{end}}
         bufbuild/buf generate .
       - touch gen/proto.touch
     generates:
