gitignore and mod update

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -46,7 +46,8 @@ tasks:
         --user $(id -u):$(id -g)
         --env XDG_CACHE_HOME=/workspace
         {{end}}
-        bufbuild/buf mod update
+        bufbuild/buf mod update .
+      - >-
         docker run --rm
         --volume "$(pwd):/workspace"
         --workdir /{{default "workspace" .GOAT_BUF_WORK_DIR}}
