--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,14 +7,10 @@ tasks:
     deps: [test]
 
   gen:
-    vars:
-      GOAT_BUF_WORK_DIR: '{{default "workspace" .GOAT_BUF_WORK_DIR}}'
     desc: |
       Run any generate actions. Useful to run to make an IDE happy.
     deps:
       - task: gen-proto
-        vars: 
-          GOAT_BUF_WORK_DIR: '{{default "workspace" .GOAT_BUF_WORK_DIR}}'
       - task: gen-mocks
 
   test:
@@ -40,27 +36,16 @@ tasks:
       - rm -fr gen/*
 
   gen-proto:
-    vars:
-      GOAT_BUF_WORK_DIR: '{{default "workspace" .GOAT_BUF_WORK_DIR}}'
     cmds: 
       - >-
         docker run --rm
-        --volume "{{.ROOT_DIR}}:/workspace"
-        --workdir /{{.GOAT_BUF_WORK_DIR}}
+        --volume "{{.TASKFILE_DIR}}:/workspace"
+        --workdir /workspace
         {{if eq OS "linux"}}
         --user $(id -u):$(id -g)
         --env XDG_CACHE_HOME=/workspace
         {{end}}
-        bufbuild/buf mod update
-      - >-
-        docker run --rm
-        --volume "{{.ROOT_DIR}}:/workspace"
-        --workdir /{{.GOAT_BUF_WORK_DIR}}
-        {{if eq OS "linux"}}
-        --user $(id -u):$(id -g)
-        --env XDG_CACHE_HOME=/workspace
-        {{end}}
-        bufbuild/buf generate .
+        bufbuild/buf:1.26.1 generate .
       - touch gen/proto.touch
     generates:
       - gen/proto.touch
