Use Buf Build instead of protobuild scripts (#24)
Previously we have used protobuild scripts to generate proto files. Migrating to buf/build gives us benefits, such as breaking proto changes, version management, etc.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -39,16 +39,19 @@ tasks:
       - rm -fr gen/*
 
   gen-proto:
-    env:
-      DISABLE_REQUIRE_UNIMPLEMENTED_SERVERS: 1
-    cmds:
-      - bash protobuild.sh
+    cmds: 
+      - >-
+        docker run --rm
+        --volume "{{.TASKFILE_DIR}}:/workspace"
+        --workdir /workspace
+        {{if eq OS "linux"}}
+        --user $(id -u):$(id -g)
+        --env XDG_CACHE_HOME=/workspace
+        {{end}}
+        bufbuild/buf:1.26.1 generate .
       - touch gen/proto.touch
     generates:
       - gen/proto.touch
-    sources:
-      - protobuild.sh
-      - "goatorepo/*.proto"
 
   gen-mocks:
     deps: [gen-proto]
