--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,9 +1,10 @@
 version: v1
 plugins:
-  - plugin: buf.build/protocolbuffers/go
+  - plugin: go
     out: gen
     opt: paths=source_relative
-  - plugin: buf.build/grpc/go
+
+  - plugin: go-grpc
     out: gen
     opt: paths=source_relative,require_unimplemented_servers=false
   
