do I need path?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Golang with cache
         uses: magnetikonline/action-golang-cache@v3
         with:
-          go-version-file: go.mod
+          go-version-file: ./go.mod
 
       - run: go version
 
